# VoluScroll

./: .gitignore  LICENSE  pyproject.toml  requirements.txt  voluscroll.py
src/: main.py  volume_scroller.py
src/voluscroll/: __init__.py  tray_icon.py
